--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="atm__subtitle">Увеличьте выручку с встроенных покупок.<br> Раскройте весь потенциал вашего приложения.</div>
 					<div class="atm__button"><a href="#contact">Связаться с нами</a></div>
 				</div>
-				<div class="col-12 col-md-4">
+				<div class="col-12 col-md-4 hidden-on-mobile">
 					<img src="img/atm-pic.svg" alt="">
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 	<section class="block" id="more">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-12 col-md-6">
+				<div class="col-12 col-md-6 hidden-on-mobile">
 					<img src="img/pers-pic.svg" alt="">
 				</div>
 				<div class="col-12 col-md-6">
@@ -80,7 +80,7 @@
 
 	<section class="block">
 		<div class="container">
-			<div class="row align-items-center">
+			<div class="row align-items-center row--crm">
 				<div class="col-12 col-md-6">
 					<div class="owl-carousel app-slider">
 						<img src="http://placehold.it/280x500/2E0E4E/808080?Text=1" alt="">
@@ -146,7 +146,7 @@
 	<section class="recipes">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 col-md-6">
+				<div class="col-12 col-md-6 hidden-on-mobile">
 					<img src="img/recipes-pic.svg" alt="">
 				</div>
 				<div class="col-12 col-md-6">
