--- a/index.html
+++ b/index.html
@@ -3,22 +3,43 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+		*, *:before, *:after {
+			padding: 0;
+			margin: 0;
+		}
+		body {
+			background-color: tomato;
+			position: relative;
+		}
+		body::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100vh;
+			background-color: #fff;
+			transition: 600ms ease-in-out;
+		}
+		body.loaded::before {
+			opacity: 0;
+			visibility: hidden;
+			transform: scale(0.9) rotate(45deg);
+		}
+	</style>
 </head>
 <body>
 	
-	<p>Width: <span id="width"></span> Height: <span id="height"></span></p>
-	<p>InnerWidth: <span id="innerwidth"></span> InnerHeight: <span id="innerheight"></span></p>
-	<p>OuterWidth: <span id="outerwidth"></span> OuterHeight: <span id="outerheight"></span></p>
+	<div id="debug"></div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(document).ready(function(){
-			$('#width').html( $(window).width() );
-			$('#height').html( $(window).height() );
-			$('#innerwidth').html( $(window).innerWidth() );
-			$('#innerheight').html( $(window).innerHeight() );
-			$('#outerwidth').html( $(window).outerWidth() );
-			$('#outerheight').html( $(window).outerHeight() );
+		    $('<img/>').attr('src', 'https://algoritmika.org/img/header-bg.jpg').on('load', function() {
+		       $(this).remove();
+		       $('body').addClass('loaded');
+		    });
 		});
 	</script>
 </body>
