--- a/messages.html
+++ b/messages.html
@@ -362,9 +362,9 @@
 
             <div class="spopup__pic"></div>
 
-            <div class="spopup__title">Так держать!</div>
+            <div class="spopup__title">-1 тролль,</div>
 
-            <div class="spopup__subtitle">Лови +1!</div>
+            <div class="spopup__subtitle">+1 балл.</div>
 
             <div class="spopup__desc">Лучше сразу «Пожаловаться» на троллей. Если им отвечать, то они никогда не перестанут издеваться.</div>
 
@@ -400,11 +400,11 @@
 
             <div class="spopup__pic"></div>
 
-            <div class="spopup__title">-1 тролль,</div>
+            <div class="spopup__title">Так держать!</div>
 
-            <div class="spopup__subtitle">+1 балл.</div>
+            <div class="spopup__subtitle">Лови +1!</div>
 
-            <div class="spopup__desc">Лучше сразу «Пожаловаться» на троллей. Если им отвечать, то они никогда не перестанут издеваться.</div>
+            <div class="spopup__desc">Отлично, что ты не потерял сообщение друга среди троллей.</div>
 
             <div class="spopup__button">
                 <a href="success.html" class="spopup__close">Продолжить</a>
