--- a/messages.html
+++ b/messages.html
@@ -277,7 +277,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-image: url('img/avatar.png')"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Сева Брусникин</div>
 						<div class="chat__item-text">Тролли достают(((</div>
 					</div>
 				</div>
@@ -293,7 +293,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-image: url('img/avatar.png')"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Сева Брусникин</div>
 						<div class="chat__item-text">Давай, я могу через час. </div>
 					</div>
                 </div>
