--- a/wall.html
+++ b/wall.html
@@ -235,7 +235,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-color: #000"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Черный Квадрат</div>
 						<div class="chat__item-text">Нет ты дурак!! Угадай кто я.</div>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-color: #000"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Черный Квадрат</div>
 						<div class="chat__item-text">Ты никогда не узнаешь правды!</div>
 					</div>
 				</div>
@@ -285,7 +285,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-image: url('img/wall-avatar-03.png')"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Настёна Сластёна</div>
 						<div class="chat__item-text">Все узнают, все узнают!</div>
 					</div>
 				</div>
@@ -301,7 +301,7 @@
 				<div class="chat__item chat__item--answer">
 					<div class="chat__item-avatar" style="background-image: url('img/wall-avatar-03.png')"></div>
 					<div class="chat__item-message">
-						<div class="chat__item-name">Happy Finger</div>
+						<div class="chat__item-name">Настёна Сластёна</div>
 						<div class="chat__item-text">Все узнают твой самый страшный секрет</div>
 					</div>
 				</div>
