--- a/ie/index.html
+++ b/ie/index.html
@@ -28,6 +28,8 @@
 			document.write('<script src="js/ie/js/cssQuery-p.js"><\/script>');
 			document.write('<script src="js/ie/js/jcoglan.com/sylvester.js"><\/script>');
 			document.write('<script src="js/ie/js/cssSandpaper.js"><\/script>');
+			document.write('<script src="js/ie/flexibility.js"><\/script>');
+			flexibility(document.documentElement);
 		}
 	</script>
 
