--- a/ie/wall.html
+++ b/ie/wall.html
@@ -8,6 +8,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="stylesheet" href="css/main.min.css">
+	<!--[if lt IE 10]>
+		<link rel="stylesheet" type="text/css" href="css/ie.css">
+	<![endif]-->
 </head>
 
 <body>
