--- a/ie/wall.html
+++ b/ie/wall.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 
 		<div class="container container--header">
-			<div class="header">
+			<div class="header" id="header">
 				<div class="header__logo">НаСвязи!</div>
 				<div class="header__search">
 					<div class="header__search-input"></div>
@@ -400,14 +400,16 @@
 	</div>
 
 	<script src="js/scripts.min.js"></script>
+	<script src="js/ie/flexibility.js"></script>
+	<script>
+		flexibility(document.getElementById('header'));
+	</script>
 	<script type="text/javascript">
 		if(/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
 			document.write('<script src="js/ie/js/EventHelpers.js"><\/script>');
 			document.write('<script src="js/ie/js/cssQuery-p.js"><\/script>');
 			document.write('<script src="js/ie/js/jcoglan.com/sylvester.js"><\/script>');
 			document.write('<script src="js/ie/js/cssSandpaper.js"><\/script>');
-			document.write('<script src="js/ie/flexibility.js"><\/script>');
-			flexibility(document.getElementsByClassName('header'));
 		}
 	</script>
 
