--- a/locked-wall.html
+++ b/locked-wall.html
@@ -66,7 +66,7 @@
 							<div class="wall__item-name">Happy <br>Finger</div>
 						</div>
 						<div class="wall__item-message">
-							<div class="wall__item-text" style="font-style: italic; color: #ff3d00; font-size: 24px; font-weight: 700">Да, с таким лицом только и<br> выкладывать фотки...</div>
+							<div class="wall__item-text" style="font-style: italic; color: #00FF29; font-size: 24px; font-weight: 700">Да, с таким лицом только и<br> выкладывать фотки...</div>
 							<div class="wall__item-buttons">
 								<div class="wall__reply" data-popup="popup-fail">Ответить</div>
 								<div class="wall__report" data-popup="popup-success">Пожаловаться</div>
